--- a/paginas_nerdhub/paginas_nerdhub/pagina_pedidos/index.html
+++ b/paginas_nerdhub/paginas_nerdhub/pagina_pedidos/index.html
@@ -26,7 +26,7 @@
         
         body {
             font-family: 'Inter', sans-serif;
-            background: #f0f0f0;
+            background: #ffffff;
             min-height: 100vh;
         }
 
