--- a/paginas_nerdhub/paginas_nerdhub/cadastro_login/index.html
+++ b/paginas_nerdhub/paginas_nerdhub/cadastro_login/index.html
@@ -33,7 +33,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #ffffff;
+            color: #333333;
             padding: 20px;
         }
 
@@ -72,13 +72,12 @@
             --font-2xl: 1.5rem;    /* 24px */
         }
 
-        /* Cards no estilo sidebar */
+        /* Cards no estilo sidebar - FUNDO BRANCO */
         .card {
-            background: var(--primary-gradient);
+            background: var(--white);
             border-radius: 20px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            border: 2px solid rgba(85, 161, 67, 0.3);
             padding: var(--space-lg);
-            backdrop-filter: blur(10px);
             box-shadow: var(--shadow-lg);
             width: 100%;
             max-width: 400px;
@@ -105,28 +104,27 @@
             text-align: center;
             margin-bottom: var(--space-lg);
             padding-bottom: var(--space-sm);
-            border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+            border-bottom: 2px solid rgba(85, 161, 67, 0.3);
         }
 
         .card-title {
             font-size: var(--font-xl);
             font-weight: 700;
-            color: var(--white);
+            color: var(--accent);
             margin-bottom: var(--space-xs);
             display: flex;
             align-items: center;
             justify-content: center;
             gap: var(--space-sm);
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .card-title i {
-            color: var(--accent-light);
+            color: var(--primary);
             font-size: var(--font-lg);
         }
 
         .card-subtitle {
-            color: rgba(255, 255, 255, 0.8);
+            color: #666666;
             font-size: 0.9rem;
         }
 
@@ -141,7 +139,7 @@
         .form-label {
             display: block;
             margin-bottom: var(--space-xs);
-            color: var(--white);
+            color: #444444;
             font-weight: 600;
             font-size: var(--font-base);
         }
@@ -149,24 +147,23 @@
         .form-input {
             width: 100%;
             padding: var(--space-sm);
-            background: rgba(255, 255, 255, 0.15);
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: var(--gray-light);
+            border: 2px solid rgba(85, 161, 67, 0.3);
             border-radius: 12px;
-            color: var(--white);
+            color: #333333;
             font-size: var(--font-base);
             transition: all var(--transition-normal);
-            backdrop-filter: blur(5px);
         }
 
         .form-input::placeholder {
-            color: rgba(255, 255, 255, 0.6);
+            color: #888888;
         }
 
         .form-input:focus {
             outline: none;
-            border-color: var(--accent-light);
-            background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 0 0 3px rgba(23, 250, 42, 0.2);
+            border-color: var(--primary);
+            background: var(--white);
+            box-shadow: 0 0 0 3px rgba(85, 161, 67, 0.2);
             transform: translateX(5px);
         }
 
@@ -181,7 +178,7 @@
             transform: translateY(-50%);
             background: none;
             border: none;
-            color: rgba(255, 255, 255, 0.7);
+            color: #666666;
             cursor: pointer;
             font-size: var(--font-base);
             transition: all var(--transition-fast);
@@ -190,16 +187,16 @@
         }
 
         .toggle-password:hover {
-            color: var(--accent-light);
-            background: rgba(255, 255, 255, 0.1);
+            color: var(--primary);
+            background: rgba(85, 161, 67, 0.1);
         }
 
         /* Botões no estilo sidebar */
         .submit-btn {
             width: 100%;
             padding: var(--space-sm);
-            background: rgba(23, 250, 42, 0.2);
-            border: 2px solid rgba(23, 250, 42, 0.3);
+            background: var(--primary);
+            border: 2px solid var(--primary-dark);
             border-radius: 12px;
             color: var(--white);
             font-size: var(--font-base);
@@ -211,13 +208,12 @@
             align-items: center;
             justify-content: center;
             gap: var(--space-sm);
-            backdrop-filter: blur(5px);
         }
 
         .submit-btn:hover {
-            background: rgba(23, 250, 42, 0.3);
+            background: var(--primary-dark);
             transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(23, 250, 42, 0.3);
+            box-shadow: 0 5px 15px rgba(85, 161, 67, 0.4);
         }
 
         /* Divisor */
@@ -234,7 +230,7 @@
             top: 50%;
             width: 45%;
             height: 1px;
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(85, 161, 67, 0.3);
         }
 
         .divider::after {
@@ -244,16 +240,16 @@
             top: 50%;
             width: 45%;
             height: 1px;
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(85, 161, 67, 0.3);
         }
 
         .divider-text {
-            background: var(--primary-dark);
+            background: var(--white);
             padding: 0 var(--space-sm);
-            color: rgba(255, 255, 255, 0.8);
+            color: #666666;
             font-size: 0.9rem;
             border-radius: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(85, 161, 67, 0.2);
         }
 
         /* ==========================================================================
@@ -272,29 +268,28 @@
             justify-content: center;
             gap: var(--space-sm);
             padding: var(--space-sm);
-            background: rgba(255, 255, 255, 0.15);
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: var(--white);
+            border: 2px solid rgba(85, 161, 67, 0.3);
             border-radius: 12px;
-            color: var(--white);
+            color: #444444;
             font-weight: 600;
             cursor: pointer;
             transition: all var(--transition-normal);
             position: relative;
             overflow: hidden;
-            backdrop-filter: blur(5px);
         }
 
         .social-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
-            border-color: rgba(255, 255, 255, 0.4);
+            background: rgba(85, 161, 67, 0.1);
+            border-color: var(--primary);
             transform: translateX(10px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .social-icon {
             width: 20px;
             height: 20px;
-            filter: brightness(0) invert(1);
+            filter: brightness(0) saturate(100%);
         }
 
         /* ==========================================================================
@@ -303,12 +298,12 @@
         .toggle-link {
             text-align: center;
             margin-top: var(--space-md);
-            color: rgba(255, 255, 255, 0.8);
+            color: #666666;
             font-size: var(--font-base);
         }
 
         .toggle-link a {
-            color: var(--accent-light);
+            color: var(--primary);
             text-decoration: none;
             font-weight: 600;
             cursor: pointer;
@@ -318,7 +313,7 @@
         }
 
         .toggle-link a:hover {
-            background: rgba(23, 250, 42, 0.1);
+            background: rgba(85, 161, 67, 0.1);
             text-decoration: underline;
         }
 
@@ -419,7 +414,6 @@
     <div class="card hidden" id="signupCard">
         <div class="card-header">
             <h1 class="card-title">
-                <i class="fas fa-user-plus"></i>
                 Criar conta
             </h1>
             <p class="card-subtitle">Junte-se à comunidade NerdHub</p>
