--- a/paginas_nerdhub/paginas_nerdhub/pagina_endereco/index.html
+++ b/paginas_nerdhub/paginas_nerdhub/pagina_endereco/index.html
@@ -283,7 +283,7 @@
                 <div class="footer-grid">
                     <div class="footer-column">
                         <h3 class="footer-title">
-                            <i class="fas fa-gamepad"></i> Nerd Hub
+                            <i class="fas fa-gamepad"></i> NerdHub
                         </h3>
                         <p class="footer-description">
                             Sua loja de confiança para produtos de alta qualidade e atendimento excepcional.
@@ -293,20 +293,19 @@
                     <div class="footer-column">
                         <h3 class="footer-title">Links Rápidos</h3>
                         <ul class="footer-links">
-                            <li><a href="/" class="footer-link">Principal</a></li>
-                            <li><a href="/sobre" class="footer-link">Sobre Nós</a></li>
-                            <li><a href="/loja" class="footer-link">Loja</a></li>
-                            <li><a href="/suporte" class="footer-link">Suporte</a></li>
+                            <li class="footer-link">Principal</a></li>
+                            <li class="footer-link">Sobre Nós</a></li>
+                            <li class="footer-link">Suporte</a></li>
                         </ul>
                     </div>
 
                     <div class="footer-column">
                         <h3 class="footer-title">Categorias</h3>
                         <ul class="footer-links">
-                            <li><a href="/colecionaveis" class="footer-link">Colecionáveis</a></li>
-                            <li><a href="/games" class="footer-link">Games</a></li>
-                            <li><a href="/acessorios" class="footer-link">Acessórios</a></li>
-                            <li><a href="/vestuario" class="footer-link">Vestuário</a></li>
+                            <li class="footer-link">Colecionáveis</a></li>
+                            <li class="footer-link">Games</a></li>
+                            <li class="footer-link">Acessórios</a></li>
+                            <li class="footer-link">Vestuário</li>
                         </ul>
                     </div>
 
@@ -329,7 +328,7 @@
                 <div class="footer-bottom">
                     <p class="copyright">
                         <i class="far fa-copyright"></i>
-                        2024 Nerd Hub. Todos os direitos reservados.
+                        2024 NerdHub. Todos os direitos reservados.
                     </p>
                 </div>
             </div>
